# CITRIFIED

./: .gitignore  .gitmodules  README.md  data_format_spec.md  environment.yml  filter_testing.m
ROS/zmq_bridge/: CMakeLists.txt  README.md  package.xml
ROS/zmq_bridge/include/zmq_bridge/: ZMQBridge.h
ROS/zmq_bridge/launch/: rviz.rviz  zmq_bridge.launch
ROS/zmq_bridge/src/: ZMQBridge.cpp  zmq_bridge_node.cpp
control/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.remote-dev  README.md  good_standardized_sampled_train.csv
control/executables/: CMakeLists.txt  CMakeLists.txt.orig  README.md  circular_cut.cpp  dual_franka.cpp  dual_franka_incision_trials.cpp  dual_franka_joy_incision_trials.cpp  example.cpp  example_ft_sensor.cpp  incision_trials.cpp  incision_trials_parameters.yaml  inicision_trials_parameters.yaml  linear_adaptive_task.cpp  mocap_point_attractor.cpp  optitrack_incision_trials.cpp  rui_incision_trials.cpp  rui_incision_trials_lags.cpp  rui_test.cpp  silicon_insertion_trials.cpp  simple_ds_controller.cpp  simple_ik_controller.cpp  simple_joy_attractor.cpp  simple_point_attractor.cpp  surface_prober.cpp  test_esn.cpp  test_ft_sensor.cpp  test_interface.cpp  test_joy.cpp  test_learning.cpp  test_limbo.cpp  test_matplotlib.cpp  test_ml.cpp  test_simulation_interface.cpp
control/executables/tests/: mocap_point_attractor.cpp  test_ft_sensor.cpp  test_gpr_server.cpp  test_gripper.cpp  test_interface.cpp  test_learned_ds.cpp
control/executables/trial_config/: ESN_400_20210503.yaml  ESN_combined_1.yaml  SEDS_parameters.yaml  avocado_goodcurve_cut_seds.yml  dual_incision_trials_parameters.yaml  filter_config.yaml  incision_trials_parameters.yaml  orange_goodcurve_cut_seds.yml  silicon_trials_parameters.yaml  surface_probe_parameters.yaml
control/executables/trial_config/cut_curve/: GPR_model.txt  cut_curve_low_gain_coupled.yml
control/include/: CMakeLists.txt
control/include/controllers/: AdaptiveForceFollower.h  CartesianPoseController.h  CutProber.h  FrankaController.h  IncisionTrialSystem.h  KDLRobot.h  KinematicController.h  TwistController.h
control/include/fast_gmm/: CDDynamics.h  Gaussians.h  MJDynamics.h  ThirdPoly.h
control/include/filters/: DigitalButterFilter.h  DigitalButterworth.h
control/include/franka_lwi/: franka_lwi_logger.h  franka_lwi_utils.h
control/include/lagsDS/: GMM.h  GPRwrap.h  lagsDS.h
control/include/learning/: ESN.h  ESNWrapper.h  GPR.h
control/include/logger/: JSONLogger.h  json_logger.h
control/include/mathlib/: GradientDescent.h  IKGroupSolver.h  IKSubSolver.h
control/include/motion_generators/: BaseDS.h  CircularDS.h  CoupledDS.h  CoupledDSMotionGenerator.h  LagsDS.h  LagsDSMotionGenerator.h  PointAttractorDS.h  RingDS.h  coupledDSMotionGenerator.h  lagsDSMotionGenerator.h
control/include/network/: interfaces.h  netutils.h  zmq_interface.h
control/include/sensors/: ForceTorqueSensor.h  Joy.h  NetFTRDTDriver.h  RigidBodyTracker.h  netft_rdt_communication.h
control/include/sensors/netft_rdt_driver/: INetFTRDTDriver.h  MockNetFTRDTDriver.h  NetFTRDTDriver.h
control/include/sensors/optitrack/: optitrack_zmq_proto.h  optitrack_zmq_utils.h
control/lib/: CMakeLists.txt
control/optitrack/: CMakeLists.txt  README.md
control/optitrack/source/: OptiTrackZMQBridge.cpp  SampleClient.cpp
control/scripts/: build.sh  get_csvs_from_remote.sh  get_json_from_remote.sh  remote-dev.sh  run.sh  setup.sh
control/source/: CMakeLists.txt
control/source/controllers/: AdaptiveForceFollower.cpp  CMakeLists.txt  CartesianPoseController.cpp  CutProber.cpp  FrankaController.cpp  IncisionTrialSystem.cpp  KDLRobot.cpp  KinematicController.cpp  TwistController.cpp
control/source/controllers/tests/: test_adaptive_force_follower.cpp  test_cut_prober.cpp  test_franka_lwi.cpp  test_kdl_robot.cpp
control/source/fast_gmm/: CMakeLists.txt  GMRDynamics.cpp
control/source/filters/: CMakeLists.txt  DigitalButterFilter.cpp  DigitalButterworth.cpp
control/source/filters/tests/: test_digital_butter_filter.cpp
control/source/gaussian-process-regression/: CMakeLists.txt
control/source/lagsDS/: CMakeLists.txt  GMM.cpp  GPRwrap.cpp  lagsDS.cpp  utils.cpp
control/source/learning/: CMakeLists.txt  ESN.cpp  ESNWrapper.cpp  GPR.cpp
control/source/learning/tests/: test_esn.cpp  test_esn_wrapper.cpp
control/source/learning/tests/fixtures/: esn.mat  (+1 more)
control/source/logger/: CMakeLists.txt  JSONLogger.cpp  json_logger.cpp
control/source/logger/tests/: test_json_logger.cpp
control/source/mathlib/: CMakeLists.txt  IKGroupSolver.cpp
control/source/motion_generators/: BaseDS.cpp  CMakeLists.txt  CircularDS.cpp  CoupledDS.cpp  CoupledDSMotionGenerator.cpp  LagsDS.cpp  LagsDSMotionGenerator.cpp  PointAttractorDS.cpp  RingDS.cpp  coupledDSMotionGenerator.cpp  lagsDSMotionGenerator.cpp
control/source/sensors/: CMakeLists.txt  ForceTorqueSensor.cpp  Joy.cpp  NetFTRDTDriver.cpp  RigidBodyTracker.cpp  SampleOptiTrackClient.cpp
control/source/sensors/netft_rdt_driver/: MockNetFTRDTDriver.cpp  NetFTRDTDriver.cpp
control/source/sensors/tests/: test_force_torque_sensor.cpp
optitrack/: CMakeLists.txt  Dockerfile  README.md  makefile
optitrack/source/: OptiTrackZMQBridge.cpp
pure_joy/: CMakeLists.txt  Dockerfile  package.xml
pure_joy/docker/: remote-dev.sh  update_bashrc
pure_joy/include/pure_joy/: PureJoy.h  zmq_joy_protocol.h
pure_joy/launch/: pure_joy.launch
pure_joy/src/: PureJoy.cpp  pure_joy_node.cpp
pure_zmq_joy/: CMakeLists.txt  Dockerfile  package.xml
pure_zmq_joy/docker/: build-run.sh  remote-dev.sh  ros_entrypoint.sh
pure_zmq_joy/include/pure_zmq_joy/: PureZMQJoy.h
pure_zmq_joy/launch/: get_controller_name.launch  pure_zmq_joy.launch
pure_zmq_joy/src/: pure_zmq_joy_node.cpp
rviz_visualization/citrified_visualization/: CMakeLists.txt  package.xml
rviz_visualization/citrified_visualization/config/: rviz_config.rviz
rviz_visualization/citrified_visualization/launch/: citrified_visualization.launch
rviz_visualization/citrified_visualization/src/citrified_visualization/: write_data_to_rosbag.py
(+264 files in other folders)
