<?xml version="1.0"?>
<package format="2">
  <name>pure_joy</name>
  <version>0.0.0</version>
  <description>The pure_joy package</description>
  <maintainer email="dominic.reber@epfl.chh">Dominic Reber</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>joy</depend>
</package>
