<?xml version="1.0"?>
<package format="2">
  <name>zmq_bridge</name>
  <version>0.0.0</version>
  <description>The zmq_bridge package</description>
  <maintainer email="dominic.reber@epfl.chh">Dominic Reber</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>franka_panda_description</depend>
</package>
