add_executable(circular_cut circular_cut.cpp rui_test.cpp)
target_link_libraries(circular_cut motion_generators local_controllers)

add_executable(ik_controller simple_ik_controller.cpp)
target_link_libraries(ik_controller motion_generators local_controllers)

add_executable(simple_point_attractor simple_point_attractor.cpp)
target_link_libraries(simple_point_attractor dynamical_systems local_controllers yaml-cpp)

add_executable(test_interface test_interface.cpp)
target_link_libraries(test_interface cppzmq state_representation)

add_executable(example_ft_sensor example_ft_sensor.cpp)
target_link_libraries(example_ft_sensor sensors cppzmq)

add_executable(mocap_point_attractor mocap_point_attractor.cpp)
target_link_libraries(mocap_point_attractor sensors motion_generators local_controllers state_representation)

add_executable(incision_trials incision_trials.cpp)
target_compile_definitions(incision_trials PRIVATE TRIAL_CONFIGURATION_DIR="${CMAKE_CURRENT_SOURCE_DIR}/trial_config/")
target_link_libraries(incision_trials dynamical_systems local_controllers yaml-cpp cppzmq sensors filters learning logger)


add_executable(rui_test rui_test.cpp)
target_compile_definitions(rui_test PRIVATE TRIAL_CONFIGURATION_DIR="${CMAKE_CURRENT_SOURCE_DIR}/trial_config/")
target_link_libraries(rui_test dynamical_systems local_controllers yaml-cpp cppzmq sensors filters learning logger motion_generators)

add_executable(rui_incision_trials rui_incision_trials.cpp)
target_compile_definitions(rui_incision_trials PRIVATE TRIAL_CONFIGURATION_DIR="${CMAKE_CURRENT_SOURCE_DIR}/trial_config/")
target_link_libraries(rui_incision_trials dynamical_systems local_controllers yaml-cpp cppzmq sensors filters learning logger motion_generators)

add_executable(rui_incision_trials_lags rui_incision_trials_lags.cpp)
target_compile_definitions(rui_incision_trials_lags PRIVATE TRIAL_CONFIGURATION_DIR="${CMAKE_CURRENT_SOURCE_DIR}/trial_config/cut_curve/")
target_link_libraries(rui_incision_trials_lags dynamical_systems local_controllers yaml-cpp cppzmq sensors filters learning logger motion_generators lagsDS-lib)

add_executable(surface_prober surface_prober.cpp)
target_compile_definitions(surface_prober PRIVATE TRIAL_CONFIGURATION_DIR="${CMAKE_CURRENT_SOURCE_DIR}/trial_config/")
target_link_libraries(surface_prober dynamical_systems local_controllers yaml-cpp cppzmq sensors filters learning logger)

add_executable(test_learning test_learning.cpp)
target_link_libraries(test_learning learning cppzmq)
